# VPSTelegramBot

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  VPSTelegramBot.slnx  run.sh
.github/workflows/: build.yml  reusable_build.yml
FetchBaseTCPServer/: CMakeLists.txt  FetchBaseTCPServer.vcxproj
FetchNetworks/: CMakeLists.txt  FetchNetworks.vcxproj
FetchUtilityLibrary/: CMakeLists.txt  FetchUtilityLibrary.vcxproj
FetchWebFramework/: CMakeLists.txt  FetchWebFramework.cmake  FetchWebFramework.vcxproj
TaskExecutors/: CMakeLists.txt  TaskExecutors.vcxproj  TaskExecutors.vcxproj.filters
TaskExecutors/include/: NetworkSpeedTest.h
TaskExecutors/settings/: task_executors_settings.json
TaskExecutors/src/: NetworkSpeedTest.cpp
VPSTelegramBot/: CMakeLists.txt  VPSTelegramBot.vcxproj  VPSTelegramBot.vcxproj.filters  config.json
VPSTelegramBot/include/: Globals.h  Token.h
VPSTelegramBot/include/Executors/: AddNetworkSpeedTest.h  HelloExecutor.h  UpdateCertificates.h
VPSTelegramBot/include/Serializers/: ChatSerializer.h
VPSTelegramBot/include/TaskExecutors/: NetworkSpeedTest.h
VPSTelegramBot/settings/: task_executors_settings.json  web.json
VPSTelegramBot/src/: main.cpp
VPSTelegramBot/src/Executors/: AddNetworkSpeedTest.cpp  HelloExecutor.cpp  UpdateCertificates.cpp
VPSTelegramBot/src/Serializers/: ChatSerializer.cpp
VPSTelegramBot/src/TaskExecutors/: NetworkSpeedTest.cpp
