cmake_minimum_required(VERSION 3.27.0)

set(WEB_FRAMEWORK_VERSION 3.3.2)
set(WEB_FRAMEWORK_URL https://github.com/LazyPanda07/WebFramework/releases/download/v${WEB_FRAMEWORK_VERSION})
set(FETCHCONTENT_QUIET OFF CACHE BOOL "")

project(FetchWebFramework)

include(FetchContent)

if (UNIX)
    set(WEB_FRAMEWORK_URL ${WEB_FRAMEWORK_URL}/Linux-WITH_PYTHON_EXECUTORS.OFF-BUILD_PYTHON_API.OFF--WITH_DOTNET_EXECUTORS.OFF-BUILD_CSHARP_API.OFF-BUILD_CC_API.OFF.zip)
else()
    set(WEB_FRAMEWORK_URL ${WEB_FRAMEWORK_URL}/Windows-WITH_PYTHON_EXECUTORS.OFF-BUILD_PYTHON_API.OFF--WITH_DOTNET_EXECUTORS.OFF-BUILD_CSHARP_API.OFF-BUILD_CC_API.OFF.zip)
endif()

FetchContent_Declare(
    WebFramework
    URL ${WEB_FRAMEWORK_URL}
)

FetchContent_MakeAvailable(WebFramework)

set(WEB_FRAMEWORK_SDK ${webframework_SOURCE_DIR} PARENT_SCOPE)

list(APPEND CMAKE_PREFIX_PATH ${webframework_SOURCE_DIR})

set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} PARENT_SCOPE)
